--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ ErrorDocument 404 /erreur/erreur404.html
 ErrorDocument 403 /erreur/erreur403.html
 
 RewriteEngine on
-Redirect 'contact.php' '/erreur/construction.html' 
+#Redirect 'contact.php' '/erreur/construction.html' 
