--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 Options -Indexes
-ErrorDocument 404 /erreur/erreur404.html
-ErrorDocument 403 /erreur/erreur403.html
+#ErrorDocument 404 /SAE_203/erreur/erreur404.php
+ErrorDocument 403 https://meganerd-sae.dufourj.etu.mmi-unistra.fr/erreur/erreur403.php
+ErrorDocument 404 https://meganerd-sae.dufourj.etu.mmi-unistra.fr/erreur/erreur404.php
+
+
 
 RewriteEngine on
-#Redirect 'contact.php' '/erreur/construction.html' 
